[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov9"
authors = [
    {name = "Flowstate", email = "dev@flowstate.zone"},
]
description = "A port and simplification of YOLOv9 model by Kin-Yiu, Wong"
readme = "README.rst"
requires-python = ">=3.10.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "gitpython",
    "ipython",
    "matplotlib",
    "numpy",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "requests",
    "scipy",
    "thop",
    "torch",
    "torchvision",
    "tqdm",
    "protobuf",
    "tensorboard",
    "clearml",
    "comet",
    "pandas",
    "seaborn",
    "wandb",
    "albumentations",
    "pycocotools"

]

dynamic = ["version"]
